# fastapi-course-SurenKhorenyan

./: main.py  pyproject.toml  requirements.txt
src/: main.py
src/api_v1/: __init__.py
src/api_v1/customers/: depends.py  repository.py  schemas.py  service.py  views.py
src/api_v1/products/: depends.py  repository.py  schemas.py  service.py  views.py
src/config/: __init__.py  database.py  project_config.py
src/config/models/: __init__.py  base.py  customer.py  products.py
