[project]
name = "microshop"
version = "0.1.0"
description = ""
authors = [
    {name = "RomesAll",email = "romesky845@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.3"
dependencies = [
    "fastapi (>=0.121.0,<0.122.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic[email] (>=2.12.4,<3.0.0)"
]

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
